2008-09-08  Chris Marrin  <cmarrin@apple.com>

Reviewed by Sam Weinig

        - Animation of -webkit-transform matrix() function should not do linear interpolation
          https://bugs.webkit.org/show_bug.cgi?id=20667

        Test: animations/matrix-anim.html

        * ChangeLog:
        * platform/graphics/AffineTransform.cpp:
        (WebCore::affineTransformDecompose):
        (WebCore::affineTransformCompose):
        (WebCore::AffineTransform::blend):
        * platform/graphics/AffineTransform.h:
        * rendering/style/RenderStyle.cpp:
        (WebCore::MatrixTransformOperation::blend):


Canonical link: https://commits.webkit.org/28566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36274 268f45cc-cd09-0410-ab3c-d52691b4dbfc