WebCore/platform/graphics/AffineTransform.h
@@ -106,6 +106,8 @@ public:
     bool isInvertible() const;
     AffineTransform inverse() const;
 
+    void blend(const AffineTransform& from, double progress);
+
 #if !PLATFORM(WX) || USE(WXGC)
     operator PlatformAffineTransform() const;
 #endif
